--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,4 @@ spring:
   data:
     mongodb:
       uri: mongodb+srv://admin:${DB_PASSWORD}@clusterfree.zz986be.mongodb.net/${DB_NAME}?retryWrites=true&w=majority
+      auto-index-creation: true
