Implementa método save do UserController e atualiza dependência que estava incorreta

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	implementation 'org.projectlombok:lombok:lombok-mapstruct-binding:0.2.0'
+	implementation "org.projectlombok:lombok-mapstruct-binding:0.2.0"
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
